--- a/t2.html
+++ b/t2.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <select class="form-select" multiple aria-label="multiple select example">
-        <option selected>請選擇</option>
+        <!-- <option selected>請選擇</option> -->
         <option value="1">One</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
