--- a/t2.html
+++ b/t2.html
@@ -9,11 +9,43 @@
 	<title></title>
 </head>
 <body>
-    <select class="form-select" multiple aria-label="multiple select example">
+    <!-- <div class="container mt-5">
+        <label for="multiSelect" class="form-label">Select items:</label>
+        <select id="multiSelect" class="form-select" multiple aria-label="multiple select example">
+            <option value="1">Item 1</option>
+            <option value="2">Item 2</option>
+            <option value="3">Item 3</option>
+            <option value="4">Item 4</option>
+        </select>
+        <div id="selectedItemsText" class="mt-3"></div>
+    </div> -->
+
+
+    <select id="multiSelect" class="form-select" multiple aria-label="multiple select example">
         <!-- <option selected>請選擇</option> -->
         <option value="1">One</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
     </select>
+    <div id="selectedItemsText" class="mt-3"></div>
+
+    <script>
+        const selectElement = document.getElementById('multiSelect');
+        const selectedItemsText = document.getElementById('selectedItemsText');
+    
+        selectElement.addEventListener('change', function() {
+            const selectedOptions = Array.from(selectElement.selectedOptions);
+            const selectedCount = selectedOptions.length;
+    
+            // 根据选项数量更新文本
+            if (selectedCount === 0) {
+                selectedItemsText.textContent = "No items selected";
+            } else if (selectedCount === 1) {
+                selectedItemsText.textContent = `1 item selected: ${selectedOptions[0].text}`;
+            } else {
+                selectedItemsText.textContent = `${selectedCount} items selected`;
+            }
+        });
+    </script>
 </body>
 </html>
