--- a/t2.html
+++ b/t2.html
@@ -23,31 +23,37 @@
 
     <select id="multiSelect" class="form-select" multiple aria-label="multiple select example">
         <!-- <option selected>請選擇</option> -->
+        <!-- <option value="" disabled selected>請選擇</option> -->
         <option value="1">One</option>
         <option value="2">Two</option>
         <option value="3">Three</option>
     </select>
-    <div id="selectedItemsText" class="mt-3"></div>
+    <!-- <div id="selectedItemsText" class="mt-3"></div> -->
 
     <script>
         const selectElement = document.getElementById('multiSelect');
-        const selectedItemsText = document.getElementById('selectedItemsText');
-
-        // 初始化时设置默认文本为 "請選擇"
-        selectedItemsText.textContent = "請選擇";
 
         selectElement.addEventListener('change', function() {
             const selectedOptions = Array.from(selectElement.selectedOptions);
-            const selectedCount = selectedOptions.length;
 
-            // 根据选项数量更新文本
-            if (selectedCount === 0) {
-                selectedItemsText.textContent = "請選擇";
-            } else if (selectedCount === 1) {
-                selectedItemsText.textContent = `1 item selected: ${selectedOptions[0].text}`;
-            } else {
-                selectedItemsText.textContent = `${selectedCount} items selected`;
+            // 如果有用户选择其他选项，移除默认的“請選擇”选项
+            if (selectedOptions.length > 0) {
+                const placeholderOption = selectElement.querySelector('option[value=""]');
+                if (placeholderOption) {
+                    placeholderOption.remove();
+                }
             }
+        });
+
+        // 初始化时添加“請選擇”作为第一个默认选项
+        document.addEventListener('DOMContentLoaded', function() {
+            const defaultOption = document.createElement('option');
+            defaultOption.value = "";
+            defaultOption.disabled = true;
+            defaultOption.selected = true;
+            defaultOption.textContent = "請選擇";
+
+            selectElement.insertBefore(defaultOption, selectElement.firstChild);
         });
     </script>
 </body>
